bugs fixed and features fully developed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="overview">Overview: </string>
     <string name="creators">Creators:</string>
     <string name="production_companies">Production companies: </string>
+    <string name="similar">Similar TV shows:</string>
+    <string name="try_again">Try Again</string>
 </resources>
